--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities{
+    .card{
+        @apply py-3 space-y-2 bg-[#2D3142] m-3 md:m-2 p-4 h-[250px] rounded-md mt-5 hover:scale-105 transition-all duration-300
+    }
+}
