--- a/main.css
+++ b/main.css
@@ -6,4 +6,7 @@
     .card{
         @apply py-3 space-y-2 bg-[#2D3142] m-3 md:m-2 p-4 h-[250px] rounded-md mt-5 hover:scale-105 transition-all duration-300
     }
+    .card-one{
+        @apply shadow-2xl p-4 rounded-lg hover:scale-105 transition-all duration-300 hover:bg-gray-200
+    }
 }
